# Sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  sentinel.yaml
.dvc/: config
.github/workflows/: ci.yml
cli/: main.py
cli/commands/: add.py  init.py  logs.py  promote.py  remove.py  retrain.py  rollback.py  status.py
core/: config.py  registry.py
core/buffer/: schema.py  store.py
core/ingestion/: parser.py  server.py
core/scheduler/: runner.py
core/snapshot/: manager.py
docs/: adding-a-model.md  architecture.md  configuration.md  getting-started.md
docs/dashboards/: latency-spikes.json  memory-saturation.json
exposition/: metrics.py
models/: base.py
models/builtin/cpu-exhaustion/: architecture.py  infer.py  manifest.yaml  retrain.py
models/builtin/latency-spikes/: architecture.py  infer.py  manifest.yaml  retrain.py
models/builtin/memory-saturation/: architecture.py  infer.py  manifest.yaml  retrain.py
pipeline/hotswap/: swapper.py
pipeline/inference/: inferencer.py
pipeline/training/: trainer.py
proto/: types.proto
tests/integration/: test_ingest_pipeline.py  test_training_pipeline.py
tests/unit/: test_buffer.py  test_drift.py  test_exposition.py  test_parser.py  test_registry.py
versioning/: data.py  experiment.py  model.py
