[project]
name = "sentinel"
version = "0.1.0"
description = "Predictive observability for Prometheus and Grafana"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "dvc>=3.56.0",
    "fastapi>=0.115.0",
    "joblib>=1.4.0",
    "lightgbm>=4.5.0",
    "mlflow>=2.18.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "prophet>=1.1.6",
    "pyarrow>=18.0.0",
    "pydantic>=2.10.0",
    "python-snappy>=0.7.3",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "scikit-learn>=1.5.0",
    "typer>=0.13.0",
    "uvicorn[standard]>=0.32.0",
    "wandb>=0.19.0",
]

[project.scripts]
sentinel = "cli.main:app"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]